# VoiceScribe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: HANDOFF.md  PROJECT_STRUCTURE.md
docs/superpowers/plans/: 2026-07-04-voicescribe-v1.md
docs/superpowers/specs/: 2026-07-04-voicescribe-implementation-design.md
scripts/: build_cli.bat  build_gui.bat  download_models.py
tests/: __init__.py  test_asr_backend.py  test_audio_loader.py  test_batch_processor.py  test_cli.py  test_language_detector.py  test_output_formats.py  test_whisper_asr.py
voicescribe/: __init__.py  __main__.py  __version__.py  cli.py  gui.py
voicescribe/core/: __init__.py  asr_backend.py  audio_loader.py  batch_processor.py  config.py  file_watcher.py  language_detector.py  output_formats.py  paddle_asr.py  whisper_asr.py
voicescribe/ui/: __init__.py  drop_zone.py  main_window.py  preview_panel.py  progress_bar.py  queue_panel.py  widgets.py
