[project]
name = "voicescribe"
version = "0.1.0"
description = "VoiceScribe · 离线音频转文字工具（CLI + GUI）"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [
    { name = "VoiceScribe Dev" }
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "faster-whisper>=0.10",
    "soundfile>=0.12",
    "numpy>=1.26",
    "watchdog>=4.0",
    "PyYAML>=6.0",
    "tkinterdnd2>=0.4.0",
    "pydub>=0.25",
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
voicescribe = "voicescribe.cli:main"
voicescribe-gui = "voicescribe.gui:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["voicescribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"